kube-objects/migration-pvc-mount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: migration-storage
  namespace: bms

spec:
  containers:
    - name: storage
      image: alpine:3.20
      command: ["sleep", "3600"]

      volumeMounts:
        - name: migrations
          mountPath: /migrations

  volumes:
    - name: migrations
      persistentVolumeClaim:
        claimName: migration-pvc
