kube-objects/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: bms

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: ghcr.io/farzaddm/apartment-manager-backend/apt_backend:latest

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: bms

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
