kube-objects/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  namespace: bms

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379

          command:
            - redis-server
            - --appendonly
            - "yes"

          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"

          volumeMounts:
            - name: redis-storage
              mountPath: /data

      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: bms

spec:
  type: ClusterIP
  selector:
    app: redis

  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
